--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -10,7 +10,7 @@ body
 	width: 100%
 	height: 100vh
 	overflow: hidden
-	background-color: #222 * 1.75	
+	background-color: #222 * 1.75 
 
 
 
@@ -154,6 +154,7 @@ body
 
 		&__btn
 			font-weight: bold
+			user-select: none
 
 			&:hover
 
@@ -183,6 +184,7 @@ body
 			height: 40vmin
 			border: .6vmin dotted olive * 1.325
 			border-radius: 2vmin
+			user-select: none
 
 			&_no-active
 				opacity: 0
